--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fastify/static": "7.0.4",
     "@libsql/client": "^0.14.0",
+    "@fastify/cors": "^8.0.0",
     "dotenv": "^16.4.7",
     "fastify": "4.28.1",
     "pino-pretty": "11.2.2",
