--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,23 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "/public/(.*)",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Accept",
+        "Cache-Control": "public, max-age=31536000"
+      },
       "dest": "/server.js"
     },
     {
-      "src": "/public/(.*)",
+      "src": "/api/(.*)",
+      "headers": {
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+      },
       "dest": "/server.js"
     },
     {
