--- a/vercel.json
+++ b/vercel.json
@@ -23,12 +23,16 @@
         "Access-Control-Allow-Credentials": "true",
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
+        "Content-Type": "application/json"
       },
       "dest": "/server.js"
     },
     {
       "src": "/(.*)",
+      "headers": {
+        "Content-Type": "application/json"
+      },
       "dest": "/server.js"
     }
   ]
